# ezg18-naise-demo

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  Toolchain-mingw32.cmake
engine/: CMakeLists.txt
engine/assets/models/spaceship/: spaceship.gltf
engine/assets/shaders/: color_fragment_shader.glsl  gouraud_fragment_shader.glsl  gouraud_vertex_shader.glsl  phong_fragment_shader.glsl  simple_vertex_shader.glsl
engine/assets/shaders/compute-shaders/: particle-system-template.glsl  sky-particle-system.glsl  vortex-particle-system.glsl
engine/assets/shaders/deferred-shading/: ds_debug.frag  pbr.frag  pbr.vert
engine/assets/shaders/shadows/: shadow-map.frag  shadow-map.vert
engine/assets/shaders/skybox/: skybox.frag  skybox.vert
engine/assets/shaders/text/: text.frag  text.vert
engine/assets/textures/: earth.dds  floor_skyfi2_diff.dds  floor_skyfi2_norm.dds  floor_skyfi2_norm2.dds  floor_skyfi2_spec.dds  floor_skyfi9_diff.dds  floor_skyfi9_diff2.dds  floor_skyfi9_glow.dds  floor_skyfi9_glow1.dds  floor_skyfi9_norm.dds  floor_skyfi9_spec.dds  floor_skyfi_diff.dds  floor_skyfi_diff2.dds  floor_skyfi_norm.dds  floor_skyfi_spec.dds  hull_spec.dds  moon.dds  object11_diff.dds  object11_glow.dds  object11_glow1.dds  object11_glow2.dds  object_norm.dds  sun.dds  tile01.dds  tile01s.dds  tiles_diff.dds  tiles_spec.dds  torus_diff.dds  torus_glow.dds
engine/assets/textures/object/: object11_disp_strong.dds  object11_disp_strong_inv.dds  object_disp.dds  object_norm.dds  object_norm_inv.dds
engine/include/: Engine.hpp  Logger.hpp  Resources.hpp  Skybox.hpp  Utils.hpp  Window.hpp
engine/include/aspects/: Aspect.hpp
engine/include/components/: AABBComponent.hpp  AnimationComponent.hpp  CameraComponent.hpp  ChildrenComponent.hpp  CollisionComponent.hpp  Component.hpp  InputComponent.hpp  LightComponent.hpp  MaterialComponent.hpp  MeshComponent.hpp  ParentComponent.hpp  RigidBodyComponent.hpp  TagComponent.hpp  TransformComponent.hpp  VisualComponent.hpp
engine/include/debug/: DebugInputMapper.hpp
engine/include/factories/: Box.hpp  LightFactory.hpp  MaterialFactory.hpp  MeshFactory.hpp  RigidBodyFactory.hpp  Sphere.hpp
engine/include/filter/: Filter.hpp
engine/include/meshes/: MeshFactory.hpp
engine/include/resource-loader/: GLTFLoader.hpp  ModelLoaderAdapter.hpp
engine/include/scene/: Entity.hpp  EntityManager.hpp  Scene.hpp  Signature.hpp
engine/include/systems/: Event.hpp  EventManager.hpp  PhysicsSystem.hpp  RenderSystem.hpp  System.hpp  SystemsManager.hpp  TransformSystem.hpp  WindowSystem.hpp
engine/include/systems/animations/: AnimationSystem.hpp
engine/include/systems/debugging/: DebugInputMapper.hpp  DebugSystem.hpp
engine/include/systems/input/: InputMapper.hpp  InputSystem.hpp
engine/include/systems/particle-system/: ComputeShader.hpp  GPUMeshParticleSystem.hpp  GPUParticleComponent.hpp  GPUParticleData.hpp  GPUParticleSystem.hpp  MeshParticleComponent.hpp  SimpleGPUParticleComponent.hpp  SimpleGPUParticleSystem.hpp
engine/include/systems/physics/: BulletDebugDrawer.hpp  BulletDebugDrawerMesh.hpp
engine/include/systems/render-engine/: DeferredRenderTarget.hpp  HiZRenderTarget.hpp  PingPongTarget.hpp  PostProcessingTarget.hpp  RenderCommands.hpp  RenderEngine.hpp  RenderTarget.hpp  Resources.hpp
engine/resources/shaders/: phong_fragment_shader.glsl  phong_vertex_shader.glsl  simple_vertex_shader.glsl
engine/resources/shaders/compute-shaders/: star-field-particle-system.glsl
engine/resources/shaders/deferred-shading/: ds_debug.frag  pbr.frag  pbr.vert  phong.frag
engine/resources/shaders/post-processing/: combine.glsl  fog.comp  hdr.frag  luminance.glsl  luminance_reduction.glsl  motion-blur.frag  quad.vert  screen_space_reflections.frag
engine/resources/shaders/shadows/: shadow-map.frag  shadow-map.vert
engine/resources/shaders/skybox/: skybox.frag
engine/resources/shaders/text/: text.frag  text.vert
engine/src/: Engine.cpp  Logger.cpp  Resources.cpp  Skybox.cpp  Utils.cpp  Window.cpp
engine/src/aspects/: Aspect.cpp
engine/src/components/: CameraComponent.cpp  ChildrenComponent.cpp  InputComponent.cpp  MeshComponent.cpp  RigidBodyComponent.cpp
engine/src/debug/: DebugInputMapper.cpp
engine/src/factories/: Box.cpp  MeshFactory.cpp  RigidBodyFactory.cpp  Sphere.cpp
engine/src/filter/: Filter.cpp
engine/src/meshes/: Box.cpp  MeshFactory.cpp  Sphere.cpp
engine/src/resource-loader/: GLTFLoader.cpp
engine/src/scene/: Entity.cpp  EntityManager.cpp  Scene.cpp
engine/src/systems/: PhysicsSystem.cpp  RenderSystem.cpp  System.cpp  SystemsManager.cpp  TransformSystem.cpp  WindowSystem.cpp
engine/src/systems/animations/: AnimationSystem.cpp
engine/src/systems/debugging/: DebugInputMapper.cpp  DebugSystem.cpp
engine/src/systems/input/: InputSystem.cpp
samples/: CMakeLists.txt
samples/animation-demo/: CMakeLists.txt
samples/animation-demo/blender-files/: simple-cube-animation.blend  simple_robot_arm_animation.blend
samples/animation-demo/resources/: simple-cube-animation.gltf  simple-robot-arm-animation.gltf
samples/animation-demo/src/: main.cpp
samples/common/FPSCameraSystem/: FPSCameraInputMapper.cpp  FPSCameraInputMapper.hpp  FPSCameraMovementSystem.cpp  FPSCameraMovementSystem.hpp
samples/common/VisualDebugging/: VisualDebuggingInputMapper.cpp  VisualDebuggingInputMapper.hpp
samples/demo/: CMakeLists.txt
samples/demo/assets/: game-settings.ini
samples/demo/resources/: config.json  credits.txt
samples/demo/src/: Demo.cpp  Demo.hpp  Game.cpp  Game.hpp  RaisingParticleSystem.cpp  RaisingParticleSystem.hpp  SceneLoaderAdapter.cpp  SceneLoaderAdapter.hpp  WeldingParticleSystem.cpp  WeldingParticleSystem.hpp
samples/include/: Game.hpp  GameInputMapper.hpp  MovementSystem.hpp
samples/material-showcase/: CMakeLists.txt
samples/material-showcase/src/: Game.cpp
samples/performance-test/: CMakeLists.txt
samples/performance-test/resources/: video-settings.ini
samples/performance-test/src/: Game.cpp
samples/src/: Game.cpp  GameInputMapper.cpp  MovementSystem.cpp
(+158 files in other folders)
